--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Cars
+application.vendor=ends0
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Cars.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.core.jar=lib\\core.jar
+file.reference.gifAnimation.jar=C:\\Users\\ends0\\Downloads\\gifAnimation.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core.jar}
+    ${file.reference.core.jar}:\
+    ${file.reference.gifAnimation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
